@@ -1,3 +1,7 @@
+19990514-19:45 CET Eddie Runia
+  * source/rtl/arrays.c
+    Patch from David (see below) was overwritten ??
+
 19990514-17:05 CET Eddie Runia
   * harbour.y
     xVar[ xEl ] += -= *= /= %= ^= added
